# eviendadhail

./: .gitignore  Cargo.toml  Makefile  lexicon.tex  words
data/: postlude.tex  prelude.tex  words.yaml
in/: words.json5  words.yaml
src/: error.rs  main.rs  serde.rs
src/convert/: main.rs
src/format/: format.rs  main.rs
src/lib/: error.rs  latex_util.rs  lib.rs  serde.rs  types.rs
