[package]
name = "eviendadhail"
version = "1.1.0"
authors = ["Matthew Kehrt <mkehrt@roseandsigil.net>"]
edition = "2018"

[lib]
name = "lexicon"
path = "src/lib/lib.rs"

[[bin]]
name = "convert"
path = "src/convert/main.rs"

[[bin]]
name = "format"
path = "src/format/main.rs"

[dependencies]
argh = "0.1.4"
serde = { version = "1.0.125", features = ["derive"] } 
serde_yaml = "0.8.17"
